--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "mpxx": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-piano-keys": "^1.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "unicorn-css": "^1.0.0",
