--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.3.6",
     "@urql/exchange-multipart-fetch": "^0.1.14",
+    "dat.gui": "^0.7.9",
     "flexpad": "^3.0.0",
     "graphql": "^16.3.0",
     "mpxx": "^5.0.0",
@@ -22,6 +23,7 @@
     "react-piano-keys": "^1.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "three": "^0.138.3",
     "unicorn-css": "^1.0.0",
     "urql": "^2.2.0",
     "web-vitals": "^2.1.4"
